--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ out/
 .vscode/
 /src/main/resources/application-oauth.properties
 /src/main/resources/application.properties
+/src/main/resources/application.yml
+/src/main/resources/application-mysql.yml
+/src/main/resources/application-oauth.yml
